# Lesion-Urgency-Model

./: .gitignore  .pre-commit-config.yaml  README.md  claude_urgency.md  pyproject.toml
configs/: default.yaml  smoke.yaml
configs/data/: isic.yaml
configs/model/: convnext.yaml  efficientnet.yaml
configs/train/: default.yaml
data/: labels_balanced.csv
data/splits/: test.csv  train.csv  val.csv
reports/: error_analysis.md  leaderboard.csv  metrics.json  mistakes.md  research_log.md  run_summary.md
scripts/: make_submission_bundle.py  prepare_isic.py
src/urgency/: __init__.py  cli.py  config.py
src/urgency/data/: dataset.py  splits.py  transforms.py
src/urgency/evaluation/: calibration.py  error_analysis.py  metrics.py  plots.py
src/urgency/inference/: api.py  infer.py
src/urgency/models/: backbones.py  multimodal.py
src/urgency/training/: callbacks.py  losses.py  trainer.py
src/urgency/utils/: checks.py  io.py  logging.py  seed.py
tests/: test_data_loading.py  test_infer_smoke.py  test_splits.py
